cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05478_SG.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"",
   "Parameters":{
      "NameTag":{
         "Description":"The Name Tag used for the resources to be created.",
         "Type":"String",
         "Default":"DKW"
      },
      "Environment":{
         "Description":"The Environment Type",
         "Type":"String",
         "Default":"DEV"
      },
      "VPC":{
         "Type":"String"
      }
   },
   "Resources":{
      "WEBSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"ECS SG To Allow Traffic from ALB",
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${NameTag}-${Environment}-WEB-ECS-SG"
                  }
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3000",
                  "ToPort":"3000",
                  "SourceSecurityGroupId":{
                     "Ref":"WEBALBSecurityGroup"
                  }
               }
            ]
         }
      },
      "APISecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"ECS SG To Allow Traffic from ALB",
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${NameTag}-${Environment}-API-ECS-SG"
                  }
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"9990",
                  "ToPort":"9990",
                  "SourceSecurityGroupId":{
                     "Ref":"APIALBSecurityGroup"
                  }
               }
            ]
         }
      },
      "WEBALBSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Enable HTTP and HTTPS Traffic",
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${NameTag}-${Environment}-WEB-ALB-SG"
                  }
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"0.0.0.0/0"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":"0.0.0.0/0"
               }
            ]
         }
      },
      "APIALBSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Enable HTTP and HTTPS Traffic",
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${NameTag}-${Environment}-API-ALB-SG"
                  }
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"0.0.0.0/0"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":"0.0.0.0/0"
               }
            ]
         }
      }
   },
   "Outputs":{
      "WEBSecurityGroup":{
         "Value":{
            "Ref":"WEBSecurityGroup"
         }
      },
      "APISecurityGroup":{
         "Value":{
            "Ref":"APISecurityGroup"
         }
      },
      "WEBALBSecurityGroup":{
         "Value":{
            "Ref":"WEBALBSecurityGroup"
         }
      },
      "APIALBSecurityGroup":{
         "Value":{
            "Ref":"APIALBSecurityGroup"
         }
      }
   }
}
